--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-search-box": "^2.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
