--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-password-mask": "^3.3.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-search-box": "^2.0.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.15.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
