Fix seat validation error - env

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_USER = https://ciwin-tickitz.herokuapp.com/v1/users/
 REACT_APP_NOWSHOWING = https://ciwin-tickitz.herokuapp.com/v1/tickets/
 REACT_APP_UPCOMING = https://ciwin-tickitz.herokuapp.com/v1/upcomings/
+REACT_APP_TRANSACTION_NOSLASH = https://ciwin-tickitz.herokuapp.com/v1/transactions
 REACT_APP_NOWSHOWING_NOSLASH = https://ciwin-tickitz.herokuapp.com/v1/tickets
 REACT_APP_UPCOMING_NOSLASH = https://ciwin-tickitz.herokuapp.com/v1/upcomings
 REACT_APP_TRANSACTION = https://ciwin-tickitz.herokuapp.com/v1/transactions/
